# crystmatch

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py
about/: index.html
api/: index.html
cli/: index.html
crystmatch/: __init__.py  analysis.py  cli.py  core.py  enumeration.py  io.py  utilities.py  utils.py
crystmatch-docs/: mkdocs.yml
crystmatch-docs/docs/: api.md  index.md
crystmatch.egg-info/: PKG-INFO  SOURCES.txt
css/: style-crystmatch.css
docs/: about.md  api.md  cli.md  index.md
docs/css/: style-crystmatch.css
search/: search_index.json
test/: wz.txt  zb.txt
